nav spacing fixed

--- a/bundle.css
+++ b/bundle.css
@@ -27,7 +27,7 @@ header h1 a {
 
 nav a {
   text-decoration: none;
-  padding: 0.75em 1em;
+  padding-left: 2em;
   color: #e0e0e0;
 }
 
